// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BufferReporter.command 1`] = `
Array [
  Object {
    "data": "foobar",
    "error": false,
    "type": "command",
  },
]
`;

exports[`BufferReporter.error 1`] = `
Array [
  Object {
    "data": "foobar",
    "error": true,
    "type": "error",
  },
]
`;

exports[`BufferReporter.finished 1`] = `
Array [
  Object {
    "data": 0,
    "error": false,
    "type": "finished",
  },
]
`;

exports[`BufferReporter.info 1`] = `
Array [
  Object {
    "data": "foobar",
    "error": false,
    "type": "info",
  },
]
`;

exports[`BufferReporter.log 1`] = `
Array [
  Object {
    "data": "foobar",
    "error": false,
    "type": "log",
  },
]
`;

exports[`BufferReporter.step 1`] = `
Array [
  Object {
    "data": Object {
      "current": 1,
      "message": "foobar",
      "total": 5,
    },
    "error": false,
    "type": "step",
  },
]
`;

exports[`BufferReporter.success 1`] = `
Array [
  Object {
    "data": "foobar",
    "error": false,
    "type": "success",
  },
]
`;

exports[`BufferReporter.warn 1`] = `
Array [
  Object {
    "data": "foobar",
    "error": true,
    "type": "warning",
  },
]
`;
